testdata/result/statement/!bad_empty_return.sql.txt
--- !bad_empty_return.sql
GRAPH FinGraph
RETURN

--- Error
syntax error: testdata/input/gql/!bad_empty_return.sql:3:1: unexpected token: <eof>
  3|  
   |  ^


--- AST
&ast.GQLGraphQuery{
  GraphClause: &ast.GQLGraphClause{
    PropertyGraphName: &ast.Path{
      Idents: []*ast.Ident{
        &ast.Ident{
          NamePos: 6,
          NameEnd: 14,
          Name:    "FinGraph",
        },
      },
    },
  },
  Query: &ast.GQLMultiLinearQueryStatement{
    Statements: []ast.GQLLinearQueryStatement{
      &ast.GQLSimpleLinearQueryStatement{
        Statements: []ast.GQLPrimitiveQueryStatement{
          &ast.GQLReturn{
            Return: 15,
            Items:  []*ast.GQLReturnItem{
              &ast.GQLReturnItem{
                Star: -1,
                Expr: &ast.BadExpr{
                  BadNode: &ast.BadNode{
                    NodePos: 22,
                    NodeEnd: 22,
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}

--- SQL
GRAPH FinGraph RETURN 
